--- a/quiz3.html
+++ b/quiz3.html
@@ -1,46 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Quiz de Sistemas Operacionais</title>
-    <style>
-        .question {
-            margin-bottom: 20px;
-        }
-        .feedback {
-            color: green;
-            font-weight: bold;
-        }
-
-        .feedback.incorrect {
-            color: red;
-        }
-        
-    </style>
+   
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <h1>Quiz sobre Sistemas Operacionais</h1>
-    <p>Selecione a resposta correta para cada pergunta e clique em "Submeter" para ver sua pontuação.</p>
+    <header class="cabecinha" ; style="position: sticky">
+        <table>
+            <tr>
+                <td><img class="logo" ; src="img/logo2.png" alt="Android"></td>
+                <td>
+                    <h1 style="color: #102C57;">Jornada pela evolução dos sistemas operacionais</h1>
+                </td>
+            </tr>
+        </table>
+
+        <a href=comeco.html>Home</a>
+        <a href=intro.html>Intro</a>
+        <a href=windows.html> Windows </a>
+        <a href=msdos.html> Ms Dos</a>
+        <a href=mac.html> Mac OS</a>
+        <a href=linux.html> Linux</a>
+        <a href="grupo.html">Grupo</a>
+        <a href="quiz.html">Quiz</a>
+        </nav>
+    </header>
+
+    <div class="quiz">
+    <h1>Quiz sobre os sistemas operacionais</h1>
+    <p>Selecione a resposta correta para cada pergunta e clique em "Entregar" para ver sua pontuação.</p></div>
 
     <form id="quiz-form">
         <!-- Questões do Quiz -->
         <div class="question">
-            <p>1. Qual desses componentes é responsável pelo gerenciamento da memória em um sistema operacional?</p>
+            <p>1. Qual é o componente principal do sistema operacional Android responsável pela execução de aplicativos e gerenciamento de processos?</p>
             <input type="radio" id="q1a" name="q1" value="A"> A) Kernel<br>
-            <input type="radio" id="q1b" name="q1" value="B"> B) Shell<br>
-            <input type="radio" id="q1c" name="q1" value="C"> C) BIOS<br>
-            <input type="radio" id="q1d" name="q1" value="D"> D) Hardware<br>
-            <input type="radio" id="q1e" name="q1" value="E"> E) Firewall<br>
+            <input type="radio" id="q1b" name="q1" value="B"> B) Framework de Aplicativos<br>
+            <input type="radio" id="q1c" name="q1" value="C"> C) Dalvik Virtual Machine<br>
+            <input type="radio" id="q1d" name="q1" value="D"> D) Activity Manager<br>
+            <input type="radio" id="q1e" name="q1" value="E"> E) Android Studio<br>
             <div class="feedback" id="feedback-q1"></div>
         </div>
 
         <div class="question">
-            <p>2. Qual foi o primeiro sistema operacional com uma interface gráfica?</p>
-            <input type="radio" id="q2a" name="q2" value="A"> A) MS-DOS<br>
-            <input type="radio" id="q2b" name="q2" value="B"> B) Windows 95<br>
+            <p>2. Qual é o terminal de linha de comando padrão no macOS?</p>
+            <input type="radio" id="q2a" name="q2" value="A"> A) Command Prompt<br>
+            <input type="radio" id="q2b" name="q2" value="B"> B) PowerShell<br>
             <input type="radio" id="q2c" name="q2" value="C"> C) Macintosh System 1<br>
-            <input type="radio" id="q2d" name="q2" value="D"> D) UNIX<br>
-            <input type="radio" id="q2e" name="q2" value="E"> E) OS/2<br>
+            <input type="radio" id="q2d" name="q2" value="D"> D) ITerm<br>
+            <input type="radio" id="q2e" name="q2" value="E"> E) Terminal<br>
             <div class="feedback" id="feedback-q2"></div>
         </div>
 
@@ -55,7 +72,8 @@
         </div>
 
         <div class="question">
-            <p>4. Qual é o sistema operacional de código aberto mais popular, amplamente utilizado em servidores e desktops?</p>
+            <p>4. Qual é o sistema operacional de código aberto mais popular, amplamente utilizado em servidores e
+                desktops?</p>
             <input type="radio" id="q4a" name="q4" value="A"> A) Windows<br>
             <input type="radio" id="q4b" name="q4" value="B"> B) macOS<br>
             <input type="radio" id="q4c" name="q4" value="C"> C) Linux<br>
@@ -66,11 +84,16 @@
 
         <div class="question">
             <p>5. O que é multitarefa em sistemas operacionais?</p>
-            <input type="radio" id="q5a" name="q5" value="A"> A) Capacidade de um sistema operacional executar várias tarefas ou processos ao mesmo tempo<br>
-            <input type="radio" id="q5b" name="q5" value="B"> B) Capacidade de um sistema operacional proteger contra vírus<br>
-            <input type="radio" id="q5c" name="q5" value="C"> C) Capacidade de um sistema operacional armazenar dados em nuvem<br>
-            <input type="radio" id="q5d" name="q5" value="D"> D) Capacidade de um sistema operacional funcionar sem internet<br>
-            <input type="radio" id="q5e" name="q5" value="E"> E) Capacidade de um sistema operacional se autoatualizar<br>
+            <input type="radio" id="q5a" name="q5" value="A"> A) Capacidade de um sistema operacional executar várias
+            tarefas ou processos ao mesmo tempo<br>
+            <input type="radio" id="q5b" name="q5" value="B"> B) Capacidade de um sistema operacional proteger contra
+            vírus<br>
+            <input type="radio" id="q5c" name="q5" value="C"> C) Capacidade de um sistema operacional armazenar dados em
+            nuvem<br>
+            <input type="radio" id="q5d" name="q5" value="D"> D) Capacidade de um sistema operacional funcionar sem
+            internet<br>
+            <input type="radio" id="q5e" name="q5" value="E"> E) Capacidade de um sistema operacional se
+            autoatualizar<br>
             <div class="feedback" id="feedback-q5"></div>
         </div>
 
@@ -85,7 +108,8 @@
         </div>
 
         <div class="question">
-            <p>7. Qual é o nome do sistema operacional desenvolvido pelo Google que se concentra no uso de aplicativos e armazenamento em nuvem?</p>
+            <p>7. Qual é o nome do sistema operacional desenvolvido pelo Google que se concentra no uso de aplicativos e
+                armazenamento em nuvem?</p>
             <input type="radio" id="q7a" name="q7" value="A"> A) Chrome OS<br>
             <input type="radio" id="q7b" name="q7" value="B"> B) Linux<br>
             <input type="radio" id="q7c" name="q7" value="C"> C) Windows<br>
@@ -106,9 +130,11 @@
 
         <div class="question">
             <p>9. O que é um sistema operacional seguro?</p>
-            <input type="radio" id="q9a" name="q9" value="A"> A) Um sistema operacional que tem medidas para proteger contra ameaças cibernéticas<br>
+            <input type="radio" id="q9a" name="q9" value="A"> A) Um sistema operacional que tem medidas para proteger
+            contra ameaças cibernéticas<br>
             <input type="radio" id="q9b" name="q9" value="B"> B) Um sistema operacional que é gratuito<br>
-            <input type="radio" id="q9c" name="q9" value="C"> C) Um sistema operacional que nunca precisa de atualizações<br>
+            <input type="radio" id="q9c" name="q9" value="C"> C) Um sistema operacional que nunca precisa de
+            atualizações<br>
             <input type="radio" id="q9d" name="q9" value="D"> D) Um sistema operacional que não requer firewall<br>
             <input type="radio" id="q9e" name="q9" value="E"> E) Um sistema operacional que funciona em nuvem<br>
             <div class="feedback" id="feedback-q9"></div>
@@ -116,69 +142,72 @@
 
         <div class="question">
             <p>10. Qual é o nome do sistema operacional desenvolvido pela Microsoft para computadores pessoais?</p>
-            <input type="radio"" id="q10a" name="q10" value="A"> A) Linux<br>
+            <input type="radio" id="q10a" name="q10" value="A"> A) Linux<br>
             <input type="radio" id="q10b" name="q10" value="B"> B) Windows<br>
             <input type="radio" id="q10c" name="q10" value="C"> C) Chrome OS<br>
             <input type="radio" id="q10d" name="q10" value="D"> D) OS/2<br>
             <input type="radio" id="q10e" name="q10" value="E"> E) macOS<br>
             <div class="feedback" id="feedback-q10"></div>
         </div>
-
-        <button type="submit">Submeter</button>
+        
+        <div>
+        <button class="submit">Entregar</button>
+        </div>
     </form>
 
     <div id="result"></div>
 
     <script>
-       document.getElementById("quiz-form").addEventListener("submit", function (event) {
-       event.preventDefault();
+        document.getElementById("quiz-form").addEventListener("submit", function (event) {
+            event.preventDefault();
 
-  const correctAnswers = {
-    q1: "A",
-    q2: "C",
-    q3: "D",
-    q4: "C",
-    q5: "A",
-    q6: "A",
-    q7: "A",
-    q8: "D",
-    q9: "A",
-    q10: "B",
-  };
+            const correctAnswers = {
+                q1: "C",
+                q2: "E",
+                q3: "D",
+                q4: "C",
+                q5: "A",
+                q6: "A",
+                q7: "A",
+                q8: "D",
+                q9: "A",
+                q10: "B",
+            };
 
-  let score = 0;
+            let score = 0;
 
-  // Loop para cada questão no quiz
-  for (let question in correctAnswers) {
-    const selectedAnswer = document.querySelector(`input[name="${question}"]:checked`);
-    const feedbackElement = document.getElementById(`feedback-${question}`);
+            // Loop para cada questão no quiz
+            for (let question in correctAnswers) {
+                const selectedAnswer = document.querySelector(`input[name="${question}"]:checked`);
+                const feedbackElement = document.getElementById(`feedback-${question}`);
 
-    if (selectedAnswer) {
-      if (selectedAnswer.value === correctAnswers[question]) {
-        // Se o usuário acertou a resposta
-        score++;
-        feedbackElement.textContent = "Correto!";
-        feedbackElement.className = "feedback";
-      } else {
-        // Se o usuário errou a resposta
-        feedbackElement.textContent = `Incorreto! A resposta correta é ${correctAnswers[question]}.`;
-        feedbackElement.className = "feedback incorrect";
-      }
-    } else {
-      // Se o usuário não respondeu
-      feedbackElement.textContent = `Sem resposta. A resposta correta é ${correctAnswers[question]}.`;
-      feedbackElement.className = "feedback incorrect";
-    }
-  }
+                if (selectedAnswer) {
+                    if (selectedAnswer.value === correctAnswers[question]) {
+                        // Se o usuário acertou a resposta
+                        score++;
+                        feedbackElement.textContent = "Correto!";
+                        feedbackElement.className = "feedback";
+                    } else {
+                        // Se o usuário errou a resposta
+                        feedbackElement.textContent = `Incorreto! A resposta correta é ${correctAnswers[question]}.`;
+                        feedbackElement.className = "feedback incorrect";
+                    }
+                } else {
+                    // Se o usuário não respondeu
+                    feedbackElement.textContent = `Sem resposta. A resposta correta é ${correctAnswers[question]}.`;
+                    feedbackElement.className = "feedback incorrect";
+                }
+            }
 
-  const totalQuestions = Object.keys(correctAnswers).length;
-  const percentage = (score / totalQuestions) * 100;
+            const totalQuestions = Object.keys(correctAnswers).length;
+            const percentage = (score / totalQuestions) * 100;
 
-  // Exibe a pontuação final e a porcentagem
-  const resultText = `Você acertou ${score} de ${totalQuestions} (${percentage.toFixed(2)}%).`;
-  document.getElementById("result").innerText = resultText;
-});
+            // Exibe a pontuação final e a porcentagem
+            const resultText = `Você acertou ${score} de ${totalQuestions} (${percentage.toFixed(2)}%).`;
+            document.getElementById("result").innerText = resultText;
+        });
 
     </script>
 </body>
+
 </html>
